<resources>
    <string name="app_name">Hospital App</string>
    <string name="email_edittext_hint"><font size="16">Email</font></string>
    <string name="password_edittext_hint"><font size="16">Password</font></string>
    <string name="repassword_edittext_hint"><font size="16">Re-Password</font></string>
    <string name="firstname_edittext_hint"><font size="16">First Name</font></string>
    <string name="lastname_edittext_hint"><font size="16">Last Name</font></string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="have_an_accout">Have an account?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="we_need_your_email">We just need your registered Email to send password reset instruction</string>
    <string name="date_default_text">--/--/----</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="doctors">Doctors</string>
    <string name="search">Search</string>
    <string name="read_more">Read More</string>
    <string name="author">Author:</string>
    <string name="dashboard">Dashboard</string>
    <string name="hospital_news">Hospital News</string>
    <string name="user_profile">Profile</string>
    <string name="appointments">Appointments</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_image">Change Image</string>
    <string name="photo">PHOTO</string>
    <string name="hospital_app">HOSPITAL APP</string>
    <string name="close">Close</string>
    <string name="apply">Apply</string>
    <string name="birth_date">Birth Date</string>
    <string name="don_t_cancel">Don\'t Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_appointment_text">Cancelling the appointment will keep it as a record if it\'s confirmed. Otherwise, it\'ll just be deleted.</string>
    <string name="cancel_appointment_title">Cancel Appointment ?</string>
    <string name="confirm_appointment_title">Confirm Appointment ?</string>
    <string name="confirm_appointment_text">Confirming the appointment will also allow for message transactions.</string>
    <string name="don_t_confirm">Don\'t Confirm</string>
    <string name="confirm">Confirm</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="personal_information">Personal Information</string>
    <string name="timing">Timing</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="book">Book</string>
    <string name="phone_example">+012 345 6789</string>
    <string name="aa">Aa</string>
    <string name="full_name">Full Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="upload_image">Upload Image</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="be_healthy">Be healthy</string>
    <string name="choose_option">Choose Option</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_image_from_gallery">Choose image from gallery</string>
    <string name="news">News</string>
    <string name="specialties">Specialties</string>
    <string name="search_doctor">Search doctor...</string>
    <string name="there_are_no_messages">There are no messages.</string>
    <string name="there_are_no_appointments">There are no appointments.</string>

</resources>
