<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="#425867"
    android:orientation="vertical">

    <TextView
        android:fontFamily="@font/nexa_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_appointment_title"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_red_dark"
        />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nexa_bold"
        android:textColor="@android:color/white"
        android:text="Johann Bach"
        android:textSize="15sp" />

    <TextView
        android:fontFamily="@font/nexa_light"
        android:text="@string/cancel_appointment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:layout_width="120dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/noCancelButton"
            android:background="@drawable/button_positive_background"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/don_t_cancel"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_negative_red_background"
            android:id="@+id/cancelButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>